--- a/index.html
+++ b/index.html
@@ -1,20 +1,107 @@
-
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>my first website</title>
+
+    <link rel="stylesheet" href="style.css">
+
+  
+
+</head>
 <body>
-<h1>JavaScript Arrays</h1>
-<h2>The pop() Method</h2>
+ <header>
+<a href="index.html"  class="header-brand">Khadar</a>
+<nav>
+   <ul>
+    <li><a href="Portfolio.html">Portfoliio</a></li>
+    <li><a href="About me">About me</a></li>
+    <li><a href="contact.html">Contact</a> </li>
+   </ul>
+   <a href="cases.html" class="header-cases">cases</a>
 
-<p>The pop() method returns the value that was "popped out":</p>
 
-<p id="demo1"></p>
-<p id="demo2"></p>
+</nav>
+ </header> 
+ 
+ <main>
+  <h1>
+   
+  </section> 
+  </h1>
+    <section class="index-banner">
+    <div class="vertical-center"> 
+    </h1>
+    <h1> HEY, I am a passionate front-end developer with experience in HTML, CSS, and JavaScript. I enjoy creating responsive and user-friendly web interfaces that provide great user experiences.</h1>
+    </div>     
+</section>
+<div class="wrapper">
+<section class="index-links">
+  <a href="cases.html">
+    <div class="index-boxlink-square">
+      <h3>cases</h3>
+      </div>
+  </a> 
+  <a href="#">
+    <div class="index-boxlink-rectangle">
+    <h3>youtubechannel</h3>
+    </div>
+  </a>
+  <a href="#">
+    <div class="index-boxlink-square">
+    <h3>Portfolio</h3>
+    </div>
+  </a>
+  <a href="#">
+    <div class="index-boxlink-rectangle">
+    <h3>About me</h3>
+    </div>
+  </a>
+  <a href="#"></a>
+    <div class="index-boxlink-square">
+      
+    <h3>contact</h3>
+    </div>
+  </a>
+  <a href="#">
+    <div class="index-boxlink-square">
+    <h3>Khadar</h3>
+    </div>
+  </a>
+</section>
+ </main>
+ <div class="wrapper">
+ <footer>
+  <ul class="footer-links-main">
 
-<script>
-const fruits = ["Banana", "Orange", "Apple", "Mango"];
-document.getElementById("demo1").innerHTML = fruits.pop();
-document.getElementById("demo2").innerHTML = fruits;
-</script>
-
-</body>
+   <li><a href="Home.html">Home</a></li>
+   <li><a href="portfiloi">Portfoliio</a></li>
+   <li><a href=""> casses</a></li>
+   <li><a href="">about me</a></li>
+   <li><a href=""> contact</a></li>
+  </ul>
+  <ul class="footer-links-cases">
+    <li><p>lates programming languages 
+z
+    </p></li>
+    <li><a href=""> Developed and maintained responsive websites and web applications.</a></li>
+    <li><a href=""> Developed and maintained responsive websites and web applications.</a></li>
+    <li><a href="">Implemented user interfaces using HTML, CSS, and JavaScript.</a></li>
+    <li><a href="">Collaborated with back-end developers and designers to ensure seamless integration and visual coherence.</a></li>
+   </ul>
+   <div class="footer-sm">
+    <a href="#">
+      <img src="insta.jpg" alt="i con">
+    </a>
+    <a href="#">
+      <img src="facebook.jpg" alt="i con">
+    </a>
+    <a href="#">
+      <img src="whatsapp.jpg" alt="i con">
+    </a>
+   </div>
+ </footer>
+</div>
+</div>
 </html>
