--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <section class="index-banner">
     <div class="vertical-center"> 
     </h1>
-    <h1> HEY, I am a passionate front-end developer with experience in HTML, CSS, and JavaScript. I enjoy creating responsive and user-friendly web interfaces that provide great user experiences.</h1>
+    <h1> HEY, I am a passionate front-end developer with experience in HTML, CSS, and JavaScript. I enjoy creating responsive and user-friendly web interfaces that provide great user experiences from varia vocational school second year.</h1>
     </div>     
 </section>
 <div class="wrapper">
@@ -86,7 +86,7 @@
 z
     </p></li>
     <li><a href=""> Developed and maintained responsive websites and web applications.</a></li>
-    <li><a href=""> Developed and maintained responsive websites and web applications.</a></li>
+    <li><a href=""> Hey. Im khadar web developer varia ammattiopisto vantaa, second year and I will graudate this year december. .</a></li>
     <li><a href="">Implemented user interfaces using HTML, CSS, and JavaScript.</a></li>
     <li><a href="">Collaborated with back-end developers and designers to ensure seamless integration and visual coherence.</a></li>
    </ul>
