--- a/storage.html
+++ b/storage.html
@@ -4,47 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Note Taking App</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 20px;
-            background-color: #f2f2;
-        }
-
-        #noteInput, #noteTextarea {
-            width: 100%;
-            margin-bottom: 10px;
-            padding: 5px;
-        }
-
-        #noteList {
-            list-style-type: none;
-            padding: 0;
-        }
-
-        .note {
-            margin-bottom: 10px;
-            padding: 10px;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-        }
-
-        .note-actions {
-            margin-top: 10px;
-        }
-
-        button {
-            padding: 5px 10px;
-            margin-right: 5px;
-        }
-
-        textarea {
-            width: 100%;
-            height: 100px;
-            margin-bottom: 10px;
-            padding: 5px;
-        }
-    </style>
+    <link rel="stylesheet" href="storage.css">
+    
 </head>
 <body>
 
@@ -56,103 +17,12 @@
     <ul id="noteList"></ul>
 
     <textarea id="noteTextarea" placeholder="Edit your note"></textarea>
+    <div id="message"></div>
     <div class="note-actions">
         <button onclick="saveEdit()">Save Edit</button>
         <button onclick="undoEdit()">Undo</button>
         <button onclick="deleteNote()">Delete Note</button>
     </div>
-
-    <script>
-        let notes = [];
-        let currentNoteIndex = -1;
-        let undoStack = [];
-
-        document.addEventListener('DOMContentLoaded', function () {
-            loadNotesFromStorage();
-            displayNotes();
-        });
-
-        function addNote() {
-            const noteInput = document.getElementById('noteInput');
-            const noteText = noteInput.value.trim();
-
-            if (noteText !== '') {
-                const note = { text: noteText, timestamp: new Date().toISOString() };
-                notes.push(note);
-                saveNotesToStorage();
-                displayNotes();
-                noteInput.value = '';
-            }
-        }
-
-        function displayNotes() {
-            const noteList = document.getElementById('noteList');
-            noteList.innerHTML = '';
-
-            notes.forEach((note, index) => {
-                const li = document.createElement('li');
-                li.className = 'note';
-                li.textContent = `${note.text} - ${new Date(note.timestamp).toLocaleString()}`;
-                li.onclick = () => selectNote(index);
-                noteList.appendChild(li);
-            });
-        }
-
-        function selectNote(index) {
-            currentNoteIndex = index;
-            const selectedNote = notes[currentNoteIndex];
-            const noteTextarea = document.getElementById('noteTextarea');
-            noteTextarea.value = selectedNote.text;
-        }
-
-        function saveEdit() {
-            if (currentNoteIndex !== -1) {
-                const noteTextarea = document.getElementById('noteTextarea');
-                const editedText = noteTextarea.value.trim();
-                if (editedText !== '') {
-                    const editedNote = { text: editedText, timestamp: new Date().toISOString() };
-                    notes[currentNoteIndex] = editedNote;
-                    saveNotesToStorage();
-                    displayNotes();
-                    clearEditArea();
-                }
-            }
-        }
-
-        function undoEdit() {
-            if (undoStack.length > 0) {
-                const lastEdit = undoStack.pop();
-                notes[currentNoteIndex] = lastEdit;
-                saveNotesToStorage();
-                displayNotes();
-                selectNote(currentNoteIndex);
-            }
-        }
-
-        function deleteNote() {
-            if (currentNoteIndex !== -1) {
-                notes.splice(currentNoteIndex, 1);
-                saveNotesToStorage();
-                displayNotes();
-                clearEditArea();
-            }
-        }
-
-        function saveNotesToStorage() {
-            localStorage.setItem('notes', JSON.stringify(notes));
-        }
-
-        function loadNotesFromStorage() {
-            const storedNotes = localStorage.getItem('notes');
-            notes = storedNotes ? JSON.parse(storedNotes) : [];
-        }
-
-        function clearEditArea() {
-            currentNoteIndex = -1;
-            const noteTextarea = document.getElementById('noteTextarea');
-            noteTextarea.value = '';
-        }
-    </script>
-
+<script src="storage.js"></script>
 </body>
 </html>
